# focus

./: Cargo.toml  README.md  docker-compose.yml  justfile
src/: client.rs  config.rs  context.rs  main.rs
src/commands/: focus.rs  mod.rs  penislength.rs
src/commands/focus/: extend.rs  list.rs  mod.rs  start.rs
src/commands/petpet/: generator.rs  mod.rs  petpet.rs
src/db/: init_db.rs  mod.rs  schema.prisma
src/db/entities/: cat_image.rs  focus_session.rs  focus_summary_entry.rs  mod.rs  prelude.rs
src/event_handler/: message.rs  mod.rs
src/session/: create.rs  get.rs  get_all.rs  get_expired.rs  mod.rs  poll.rs  update.rs
